Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8271229

[lworld] Test serviceability/sa/ClhsdbDumpclass.java fails with unexpected end of file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3 P3
    • None
    • repo-valhalla
    • hotspot

      Test serviceability/sa/ClhsdbDumpclass.java is failing for a while.
      Error message is:
      Error: unexpected end of file while reading jdk\\test\\lib\\apps\\LingeredApp.class

      The error can be manually reproduced by invoking javap manually on the LingeredApp.class class file.

      The error can be reproduced with with either the javap from the Valhalla repo or the javap from the mainline, same error in each case.

      Tracing the execution of javap shows that while processing fields of this class file, javap finds that 515 attributes must be processed (the number looks suspicious already) but reaches the end of the file while processing the first one.

      At this point, it looks like the content of the LingeredApp.class class file is the cause of the issue, this is why the CR is created as a javac bug. If the issue is not a javac issue, please update the component/subcomponent fields.

            fparain Frederic Parain
            fparain Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: