8271229: [lworld] Test serviceability/sa/ClhsdbDumpclass.java fails with unexpected end of file

Reviewed-by: dsimms