src/hotspot/share/runtime/vmStructs.cpp
@@ -2310,6 +2310,8 @@ typedef HashtableEntry<InstanceKlass*, mtClass>  KlassHashtableEntry;
   declare_constant(InstanceKlass::_misc_is_shared_app_class)              \
   declare_constant(InstanceKlass::_misc_invalid_inline_super)             \
   declare_constant(InstanceKlass::_misc_invalid_identity_super)           \
+  declare_constant(InstanceKlass::_misc_has_injected_primitiveObject)     \
+  declare_constant(InstanceKlass::_misc_has_injected_identityObject)      \
                                                                           \
   /*********************************/                                     \
   /* Symbol* - symbol max length */                                       \
